Refactor PromptTest module (#25)
* Update prompttests to annotate prompt_provider, add similarity eval fn

* Add expected param

* minor cleanup

* Update HF example

* Update some examples

* More experiment cleanup

* Visualize test results

* More example updates

* Formatting

* Json/python eval functions

* Update prompttests to annotate prompt_provider, add similarity eval fn

* Add expected param

* minor cleanup

* Update HF example

* Update some examples

* More experiment cleanup

* Visualize test results

* More example updates

* Formatting

* Json/python eval functions

* Update readme to include prompttest image

* Prompttest refactor (#26)

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Add .chroma to .gitignore

* Improve ChromaDBExperiment

* ChromaDB experiment remove default assumption for `use_existing_collection`

* Adding Weaviate experiment

* Adding Weaviate example

* Updating weaviate example and documentations

* Adding WeaviateExperiment to documentation

* Adding guard to weaviate experiment

* Json/python eval functions

* Update prompttests to annotate prompt_provider, add similarity eval fn

* Add expected param

* minor cleanup

* Update HF example

* Update some examples

* More experiment cleanup

* Visualize test results

* More example updates

* Formatting

* Json/python eval functions

* Update readme to include prompttest image

---------

Co-authored-by: Kevin <kevin@hegel-ai.com>

* Update prompttests to annotate prompt_provider, add similarity eval fn

* Add expected param

* minor cleanup

* Update HF example

* Update some examples

* More experiment cleanup

* Visualize test results

* More example updates

* Formatting

* Json/python eval functions

* Update prompttests to annotate prompt_provider, add similarity eval fn

* Add expected param

*

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a7dea195",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "edfec7c8",
    "metadata": {},
@@ -20,16 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c84ab4f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6a80e19b",
    "metadata": {},
@@ -38,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "28f1521a",
    "metadata": {},
@@ -48,18 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1eb85245",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "497ac0bb",
    "metadata": {},
@@ -69,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad3859e7",
    "metadata": {},
    "outputs": [],
@@ -80,7 +76,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ffcfbb5b",
    "metadata": {},
@@ -89,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f517570f",
    "metadata": {},
@@ -99,17 +93,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "29408faa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of India?\"}]"
+    "prompt_templates = [\n",
+    "    \"\"\"\n",
+    "INSTRUCTIONS\n",
+    "Answer the following question\n",
+    "\n",
+    "QUESTION\n",
+    "{{input}}\n",
+    "\n",
+    "ANSWER\n",
+    "\"\"\",\n",
+    "    \"\"\"\n",
+    "INSTRUCTIONS\n",
+    "Answer the following question. \n",
+    "If it is not prime, give its decomposition\n",
+    "\n",
+    "QUESTION\n",
+    "{{input}}\n",
+    "\n",
+    "ANSWER\n",
+    "\"\"\",\n",
+    "]\n",
+    "user_inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0c9a1777",
    "metadata": {},
@@ -119,16 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "69159622",
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs)"
+    "harness = PromptTemplateExperimentationHarness(\n",
+    "    OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs\n",
+    ")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "af04bd60",
    "metadata": {},
@@ -138,17 +152,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "744ab156",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
+       "      <td>0.743519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
+       "      <td>0.919933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It can be decomp</td>\n",
+       "      <td>0.928695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not prime. 17077 = 11 x</td>\n",
+       "      <td>0.550601</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                       prompt  \\\n",
+       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
+       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
+       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
+       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
+       "\n",
+       "                                           response(s)   latency  \n",
+       "0  \\nNo, 17077 is not a prime number. It is divisible   0.743519  \n",
+       "1  \\nNo, 17077 is not a prime number. It is divisible   0.919933  \n",
+       "2  \\nNo, 17077 is not a prime number. It can be decomp  0.928695  \n",
+       "3  \\nNo, 17077 is not prime. 17077 = 11 x               0.550601  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.run()\n",
     "harness.visualize()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "637a7391",
    "metadata": {},
@@ -158,18 +244,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bb779595",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
+       "      <th>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_input</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Is 17077 prime?'}</th>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
+       "      <td>\\nNo, 17077 is not prime. 17077 = 11 x</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'is 17077 a prime number'}</th>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It can be decomp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \\\n",
+       "user_input                                                                                                              \n",
+       "{'input': 'Is 17077 prime?'}          \\nNo, 17077 is not a prime number. It is divisible                                \n",
+       "{'input': 'is 17077 a prime number'}  \\nNo, 17077 is not a prime number. It is divisible                                \n",
+       "\n",
+       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \n",
+       "user_input                                                                                                                                                           \n",
+       "{'input': 'Is 17077 prime?'}          \\nNo, 17077 is not prime. 17077 = 11 x                                                                                         \n",
+       "{'input': 'is 17077 a prime number'}  \\nNo, 17077 is not a prime number. It can be decomp                                                                            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize(pivot=True)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd320e",
    "metadata": {},
@@ -178,7 +324,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c36767bd",
    "metadata": {},
@@ -188,23 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8fe03c31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import autoeval\n",
-    "\n",
-    "def extract_responses(output) -> str:\n",
-    "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
-    "\n",
-    "def auto_eval(prompt: str, results: Dict, metadata: Dict) -> float:\n",
-    "    responses = extract_responses(results)\n",
-    "    return float(sum([autoeval.compute(prompt, response) for response in responses]))"
+    "from prompttools.utils import autoeval"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3008b09e",
    "metadata": {},
@@ -214,12 +351,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4633f802",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>followed_directions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
+       "      <td>0.743519</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
+       "      <td>0.919933</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not a prime number. It can be decomp</td>\n",
+       "      <td>0.928695</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>\\nNo, 17077 is not prime. 17077 = 11 x</td>\n",
+       "      <td>0.550601</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                       prompt  \\\n",
+       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
+       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
+       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
+       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
+       "\n",
+       "                                           response(s)   latency  \\\n",
+       "0  \\nNo, 17077 is not a prime number. It is divisible   0.743519   \n",
+       "1  \\nNo, 17077 is not a prime number. It is divisible   0.919933   \n",
+       "2  \\nNo, 17077 is not a prime number. It can be decomp  0.928695   \n",
+       "3  \\nNo, 17077 is not prime. 17077 = 11 x               0.550601   \n",
+       "\n",
+       "   followed_directions  \n",
+       "0  1.0                  \n",
+       "1  1.0                  \n",
+       "2  0.0                  \n",
+       "3  0.0                  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "harness.evaluate(\"followed_directions\", auto_eval, use_input_pairs=False)\n",
+    "harness.evaluate(\"followed_directions\", autoeval.evaluate)\n",
     "harness.visualize()"
    ]
   },
