--- a/examples/notebooks/ModelComparison.ipynb
+++ b/examples/notebooks/ModelComparison.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4d8e180d",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5e9c3a4e",
    "metadata": {},
@@ -20,16 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4175323f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7d598292",
    "metadata": {},
@@ -38,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d899afc2",
    "metadata": {},
@@ -48,19 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "623cdd9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
-    "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"1\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -70,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dadc080f",
    "metadata": {},
    "outputs": [],
@@ -79,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -88,7 +82,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -98,19 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0d878c64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat_histories = [[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "            {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"},\n",
-    "]]"
+    "chat_histories = [\n",
+    "    [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"},\n",
+    "    ]\n",
+    "]"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "273e9908",
    "metadata": {},
@@ -120,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8f16f1e7",
    "metadata": {},
    "outputs": [],
@@ -129,7 +123,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -139,17 +132,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "866009ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>messages</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>gpt-3.5-turbo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>gpt-3.5-turbo-0613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                            messages  \\\n",
+       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
+       "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
+       "\n",
+       "         response(s)   latency               model  \n",
+       "0  George Washington  0.000006  gpt-3.5-turbo       \n",
+       "1  George Washington  0.000004  gpt-3.5-turbo-0613  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.run()\n",
     "harness.visualize()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be9c5ef5",
    "metadata": {},
@@ -158,7 +210,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "31776228",
    "metadata": {},
@@ -167,7 +218,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4b2ae9d9",
    "metadata": {},
@@ -177,12 +227,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "395c5710",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2f62fdfea6b540059a496e977dd8dfbe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Label(value='Input'), Label(value='gpt-3.5-turbo'), Label(value='gpt-3.5-turbo-0613'), Label…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gpt-3.5-turbo</th>\n",
+       "      <th>feedback</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                       gpt-3.5-turbo  \\\n",
+       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
+       "\n",
+       "   feedback  \n",
+       "0  0         "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.compare()"
    ]
