--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c02b0509",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ab7b247c",
    "metadata": {},
@@ -20,16 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5e5b81b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -38,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -48,18 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ed4e635e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "df3934db",
    "metadata": {},
@@ -69,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0841dd5",
    "metadata": {},
    "outputs": [],
@@ -80,7 +76,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7b106a04",
    "metadata": {},
@@ -89,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e43545ff",
    "metadata": {},
@@ -99,17 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dbab6b3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of India?\"}]"
+    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of the USA?\"}]"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9d152fdf",
    "metadata": {},
@@ -119,20 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8b3086e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(OpenAICompletionExperiment,\n",
-    "                                               \"text-davinci-003\", \n",
-    "                                               prompt_templates, \n",
-    "                                               user_inputs,\n",
-    "                                               model_arguments={\"temperature\": 0.9})"
+    "harness = PromptTemplateExperimentationHarness(\n",
+    "    OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs, model_arguments={\"temperature\": 1.0}\n",
+    ")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e6f5463a",
    "metadata": {},
@@ -142,17 +132,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "84304957",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: Who was the first president?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>1.121741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Answer the following question: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
+       "      <td>0.911955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Respond the following query: Who was the first president?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
+       "      <td>1.021080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Respond the following query: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
+       "      <td>1.274893</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   prompt  \\\n",
+       "0  Answer the following question: Who was the first president?              \n",
+       "1  Answer the following question: Who was the first president of the USA?   \n",
+       "2  Respond the following query: Who was the first president?                \n",
+       "3  Respond the following query: Who was the first president of the USA?     \n",
+       "\n",
+       "                                                                           response(s)  \\\n",
+       "0  \\n\\nThe first president of the United States was George Washington.                   \n",
+       "1  \\n\\nThe first president of the United States was George Washington, who served from   \n",
+       "2  \\n\\nThe first president of the United States was George Washington. He took office    \n",
+       "3  \\n\\nThe first President of the United States was George Washington, who was inaug     \n",
+       "\n",
+       "    latency  \n",
+       "0  1.121741  \n",
+       "1  0.911955  \n",
+       "2  1.021080  \n",
+       "3  1.274893  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.run()\n",
     "harness.visualize()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b35caa9a",
    "metadata": {},
@@ -162,18 +230,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fc2f1bde",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>Answer the following question: {{input}}</th>\n",
+       "      <th>Respond the following query: {{input}}</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_input</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Who was the first president of the USA?'}</th>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Who was the first president?'}</th>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "prompt_template                                                                                  Answer the following question: {{input}}  \\\n",
+       "user_input                                                                                                                                  \n",
+       "{'input': 'Who was the first president of the USA?'}  \\n\\nThe first president of the United States was George Washington, who served from   \n",
+       "{'input': 'Who was the first president?'}             \\n\\nThe first president of the United States was George Washington.                   \n",
+       "\n",
+       "prompt_template                                                                                   Respond the following query: {{input}}  \n",
+       "user_input                                                                                                                                \n",
+       "{'input': 'Who was the first president of the USA?'}  \\n\\nThe first President of the United States was George Washington, who was inaug   \n",
+       "{'input': 'Who was the first president?'}             \\n\\nThe first president of the United States was George Washington. He took office  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize(pivot=True)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -182,63 +310,134 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "To evaluate the results, we'll define an eval function. We can use semantic distance to check if the model's response is similar to our expected output."
+    "To evaluate the results, we'll use a pre-built eval function. We can use semantic distance to check if the model's response is similar to our expected output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63de3014",
+   "execution_count": 8,
+   "id": "8ddbb951",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity\n",
-    "\n",
-    "\n",
-    "EXPECTED = {\"Who was the first president?\": \"George Washington\",\n",
-    "            \"Who was the first president of India?\": \"Rajendra Prasad\"}\n",
-    "\n",
-    "def extract_responses(output) -> str:\n",
-    "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
-    "\n",
-    "\n",
-    "def measure_similarity(\n",
-    "    input_pair: Tuple[str, Dict[str, str]], results: Dict, metadata: Dict\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    A simple test that checks semantic similarity between the user input\n",
-    "    and the model's text responses.\n",
-    "    \"\"\"\n",
-    "    distances = [\n",
-    "        similarity.compute(EXPECTED[input_pair[1][\"input\"]], response)\n",
-    "        for response in extract_responses(results)\n",
-    "    ]\n",
-    "    return min(distances)\n",
-    "    \n"
+    "from prompttools.utils import similarity"
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e80dfeec",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "harness.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
    "source": [
-    "Finally, we can evaluate and visualize the results."
+    "Finally, we can visualize the results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "233f25a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>similar_to_expected</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: Who was the first president?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>1.121741</td>\n",
+       "      <td>0.275267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Answer the following question: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
+       "      <td>0.911955</td>\n",
+       "      <td>0.344860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Respond the following query: Who was the first president?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
+       "      <td>1.021080</td>\n",
+       "      <td>0.341740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Respond the following query: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
+       "      <td>1.274893</td>\n",
+       "      <td>0.336985</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   prompt  \\\n",
+       "0  Answer the following question: Who was the first president?              \n",
+       "1  Answer the following question: Who was the first president of the USA?   \n",
+       "2  Respond the following query: Who was the first president?                \n",
+       "3  Respond the following query: Who was the first president of the USA?     \n",
+       "\n",
+       "                                                                           response(s)  \\\n",
+       "0  \\n\\nThe first president of the United States was George Washington.                   \n",
+       "1  \\n\\nThe first president of the United States was George Washington, who served from   \n",
+       "2  \\n\\nThe first president of the United States was George Washington. He took office    \n",
+       "3  \\n\\nThe first President of the United States was George Washington, who was inaug     \n",
+       "\n",
+       "    latency  similar_to_expected  \n",
+       "0  1.121741  0.275267             \n",
+       "1  0.911955  0.344860             \n",
+       "2  1.021080  0.341740             \n",
+       "3  1.274893  0.336985             "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "harness.evaluate(\"similar_to_expected\", measure_similarity)\n",
     "harness.visualize()"
    ]
   },
