--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "30f7dc89",
    "metadata": {},
    "outputs": [],
@@ -44,19 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fcdc47b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
-    "os.environ['HUGGINGFACEHUB_API_TOKEN'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f9f880cf",
    "metadata": {},
    "outputs": [],
@@ -83,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9114cfbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = ['gpt2']\n",
+    "models = [\"gpt2\"]\n",
     "prompts = [\n",
     "    \"Who was the first president?\",\n",
-    "    \"Who was the first president of India?\",\n",
+    "    \"Who was the first president of the USA?\",\n",
     "]\n",
-    "task = ['text-generation']\n",
+    "task = [\"text-generation\"]\n",
     "temperatures = [0.0, 1.0]\n",
     "\n",
     "experiment = HuggingFaceHubExperiment(models, prompts, task, temperature=temperatures)"
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "83b33130",
    "metadata": {},
    "outputs": [],
@@ -130,38 +131,29 @@
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "To evaluate the results, we'll define an eval function. We can use semantic distance to check if the model's response is similar to our expected output."
+    "To evaluate the results, we'll use a pre-built eval function. We can use semantic distance to check if the model's response is similar to our expected output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8ddbb951",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity\n",
-    "\n",
-    "\n",
-    "EXPECTED = {\"Who was the first president?\": \"Who was the first president?\\n\\nGeorge W\",\n",
-    "            \"Who was the first president of India?\": \"Rajendra Prasad\"}\n",
-    "\n",
-    "def extract_responses(output) -> str:\n",
-    "    return [choice[\"generated_text\"] for choice in output]\n",
-    "\n",
-    "\n",
-    "def measure_similarity(\n",
-    "    prompt: str, results: Dict, metadata: Dict\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    A simple test that checks semantic similarity between the user input\n",
-    "    and the model's text responses.\n",
-    "    \"\"\"\n",
-    "    distances = [\n",
-    "        similarity.compute(EXPECTED[prompt], response)\n",
-    "        for response in extract_responses(results)\n",
-    "    ]\n",
-    "    return min(distances)"
+    "from prompttools.utils import similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e80dfeec",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")"
    ]
   },
   {
@@ -169,29 +161,106 @@
    "id": "974d6065",
    "metadata": {},
    "source": [
-    "Finally, we can evaluate and visualize the results."
+    "Finally, we can visualize the results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e80dfeec",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "experiment.evaluate(\"similar_to_expected\", measure_similarity)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4d09c18e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>similar_to_expected</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Who was the first president?</td>\n",
+       "      <td>Who was the first president?\\n\\nI think it was George Washington. I think it was John</td>\n",
+       "      <td>0.662535</td>\n",
+       "      <td>0.362770</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Who was the first president?</td>\n",
+       "      <td>Who was the first president?\\n\\nI think it was George Washington. I think it was John</td>\n",
+       "      <td>0.405260</td>\n",
+       "      <td>0.362770</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Who was the first president of the USA?</td>\n",
+       "      <td>Who was the first president of the USA?\\n\\nI think it was George Washington. I think</td>\n",
+       "      <td>0.347595</td>\n",
+       "      <td>0.348384</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Who was the first president of the USA?</td>\n",
+       "      <td>Who was the first president of the USA?\\n\\nI think it was George Washington. I think</td>\n",
+       "      <td>0.366199</td>\n",
+       "      <td>0.348384</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    prompt  \\\n",
+       "0  Who was the first president?              \n",
+       "1  Who was the first president?              \n",
+       "2  Who was the first president of the USA?   \n",
+       "3  Who was the first president of the USA?   \n",
+       "\n",
+       "                                                                             response(s)  \\\n",
+       "0  Who was the first president?\\n\\nI think it was George Washington. I think it was John   \n",
+       "1  Who was the first president?\\n\\nI think it was George Washington. I think it was John   \n",
+       "2  Who was the first president of the USA?\\n\\nI think it was George Washington. I think    \n",
+       "3  Who was the first president of the USA?\\n\\nI think it was George Washington. I think    \n",
+       "\n",
+       "    latency  similar_to_expected  temperature  \n",
+       "0  0.662535  0.362770             0.0          \n",
+       "1  0.405260  0.362770             1.0          \n",
+       "2  0.347595  0.348384             0.0          \n",
+       "3  0.366199  0.348384             1.0          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "experiment.visualize()"
    ]
